# kvforge

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
crates/kvforge-core/: Cargo.toml
crates/kvforge-core/src/: codec.rs  cost.rs  error.rs  lib.rs  pipeline.rs  types.rs
crates/kvforge-cpu/: Cargo.toml
crates/kvforge-cpu/benches/: codec_bench.rs
crates/kvforge-cpu/examples/: basic_compress.rs
crates/kvforge-cpu/src/: calibration.rs  cost.rs  entropy.rs  lib.rs  pipeline.rs  projection.rs  quantize.rs
crates/kvforge-cpu/tests/: compression_ratio.rs  cost_model.rs  roundtrip.rs
crates/kvforge-cuda/: Cargo.toml  build.rs
crates/kvforge-cuda/kernels/: entropy_decode_dequant.cu  entropy_encode.cu  fused_dequant_attention.cu  fused_project_quantize.cu
crates/kvforge-cuda/src/: gpu_pipeline.rs  kernel_launcher.rs  lib.rs
crates/kvforge-python/: Cargo.toml  pyproject.toml
crates/kvforge-python/kvforge/: __init__.py
crates/kvforge-python/src/: lib.rs  py_pipeline.rs  py_types.rs
