[package]
name = "kvforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for KVForge codec engine"

[dependencies]
thiserror = { workspace = true }
ndarray = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
